<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andreza.trabalhoandreza.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txtCliente"
        android:hint="Digite aqui o nome"
       android:id="@+id/etNome"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hint="@string/hintNome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Descrição do Defeito:"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descrição do defeito"
            android:id="@+id/etDefeito"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtValor"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="0.00"
            android:id="@+id/etValor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtTipo" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Orçamento"
                android:id="@+id/rbOrçamento"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Serviço"
                android:id="@+id/rbServiço"
                />


        </RadioGroup>

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/txtCategoria"  />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCategoria"
            android:entries="@array/Categorias"
            >
        </Spinner>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Servico Finalizado"
            android:id="@+id/cbServicoFinalizado"
           />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:id="@+id/btnServiço"/>


    </LinearLayout>





</ScrollView>
